[package]
name = "mongodb-arrow-connector"
description = "MongoDB connector that reads and writes data to/from Apache Arrow"
version = "0.3.0"
edition = "2018"
license = "Apache-2.0"
keywords = ["apache-arrow", "mongodb"]
categories = ["database"]
readme = "README.md"
repository = "https://github.com/TheDataEngine/mongodb-arrow-connector/"

[dependencies]
bson = "2.0"
mongodb = { version = "2.0" }
arrow = { version = "5.0", default-features = false }
futures-util = "0.3"

[dev-dependencies]
arrow = { version = "5.0", default-features = false, features = ["csv"] }
tokio = { version = "1.0", features = ["macros"] }